fixed issue some parts are not displayed properly on safari desktop

--- a/src/App.css
+++ b/src/App.css
@@ -795,6 +795,9 @@ video {
 .hidden {
 	display: none;
 }
+.h-12 {
+	height: 3rem;
+}
 .h-48 {
 	height: 12rem;
 }
@@ -1390,6 +1393,10 @@ video {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.lg\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
 	.lg\:grid-cols-3 {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
@@ -1446,10 +1453,6 @@ video {
 
 	.xl\:mb-16 {
 		margin-bottom: 4rem;
-	}
-
-	.xl\:grid-cols-4 {
-		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
 	.xl\:px-8 {
